--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           elm make src/Main.elm
           mkdir build
           cp index.html build/index.html
+          echo "elm-slang.openorclo.se" > build/CNAME
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.1
